@@ -40,10 +40,8 @@
 
 //=====================================================================================================================
 // Image max and minimum sizes
-	$x_max		= 700;
-	$y_max		= 700;
-	$x_min		= 300;
-	$Y_min		= 300;
+	$img_max		= 700;
+	$img_min		= 300;
 
 //=====================================================================================================================
 // Nothing should need changing beneath this line
