@@ -1,3 +1,4 @@
+	Nasty fix for imagecreate_wrapper
 	ammendable max and min image size added
 	census summary added
 	mailto form added
